[package]
name = "mechsound"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
rodio_wav_fix = "0.15.0"
once_cell = "1.17"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
flume = "0.11.1"
rand = "0.9.2"
